--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ project(Assignment_2)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(Assignment_2 main.cpp)
+add_executable( Problem1.cpp    Problem1.cpp)
